# Rust-Notification-Microservice

./: Cargo.toml
src/: main.rs
src/app/constants/: index.rs
src/app/modules/user/: index.rs
src/routes/: index.rs
