[package]
name = "rust-notification-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3.1"
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "1.0.0"
thiserror = "1.0.30"
deadpool = "0.9.0"
deadpool-lapin = "0.9.0"
lapin = "1.8.0"
